# trello-sort-checklist-items

./: README.md  pyproject.toml  sort-checklist-order.py
trello_sort_checklist_items/: __init__.py
